2019-09-02 nemea-modules-2.12.0
	* Added new luamodule
	* Simplified logger
	* Rewritten merger to use pthread instead of openmp
	* Fixed IDEA format of blacklist2idea
	* Fixed doc of prefix_tags
	* Removed debug output of munin modules

2019-05-24 nemea-modules-2.11.1
	* Removed old python3.4 version from spec file
	* Doc update by Ulrik

2019-04-21 nemea-modules-2.11.0
	* merger:
		New simplified version based on pthread for openwrt.
	* flow_meter:
		Updated test references because of MAC UniRec type conversion.
	* flow_meter&ipfixprobe:
		Improved build - linker parameters.
	* aggregator:
		Fixed build.
	* logger:
		Moved translation code into UniRec API.
	* warden_filer:
		New wrapper for warden filer that reads namespace from
		reporters config.
	* prefix_tags:
		Fixed build.
	* idea2idea:
		Bugfix undefined reference.
	* csv2nf:
		MAC address support.
	* proto_traffic:
		Extended statistic of proto_traffic by SCTP.

2019-03-21 nemea-modules-2.10.2
	* report2idea:
		Renamed reporting modules because of namespace feature.
		Bugfixes of tests.

2019-03-06 nemea-modules-2.10.1
	* blacklist2idea:
		Fixed IDEA format of amplification2idea.
	* amplification2idea:
		Fixed IDEA format of amplification2idea.
	* report2idea:
		Cleanup - deleted ipblacklist2idea.
2019-02-25 nemea-modules-2.10.0
	* hoststats2idea:
		Fixed format of IDEA messages - Description/Note.
	* prefix_tags:
		Fixed compilation&linkage.
	* rpm:
		Add ipfixprobe module, the simplified flow_meter.

2019-02-06 nemea-modules-2.9.0
	* prefix_tags:
		Add new module to add a label into flow records according to
		prefix
	* report2idea:
		Bugfix in tests which were not performing at all.
	* blacklist2idea:
		Bugfix in config loading when the file does not contain
		blacklists.
	* sipbf2idea:
		Improved alert format according to feedback from warden-info.
	* bloom_history:
		Add new module that stores observed IPs into a bloom filter to
		be checked afterwards.
	* logger-csv2nf: