@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+/usr/bin/python
 
 #
 # A format checker for LIBSVM
