@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+/usr/bin/python
 __all__ = ['find_parameters']
 
 import os, sys, traceback, getpass, time, re
