@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+/usr/bin/python
 
 import sys, os.path
 from sys import argv
