@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+/usr/bin/python
 
 from __future__ import absolute_import
 
