@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+/usr/bin/python
 # vim: tabstop=8 expandtab shiftwidth=4 softtabstop=4
 
 import pytrap
