@@ -1,3 +1,7 @@
+2020-01-30 nemea-modules-2.13.0
+	* unirecfilter: fixed typo in message
+	* luamodule: new features del(), ur_type(), ur_drop()
+
 2019-09-02 nemea-modules-2.12.0
 	* Added new luamodule
 	* Simplified logger
